--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ body {
   line-height: 1.5;
   font-weight: 300;
   color: #111;
-  background-color: #fdfdfd;
+  background-color: white;
   -webkit-text-size-adjust: 100%; }
 
 /**
@@ -146,10 +146,13 @@ pre {
  * Site header
  */
 .site-header {
-  border-top: 5px solid #424242;
-  border-bottom: 1px solid #e8e8e8;
   min-height: 56px;
-  position: relative; }
+  position: relative;
+  background-color: #00c2a2; }
+
+img.logo {
+  margin-bottom: 20px;
+  margin-top: 20px; }
 
 .site-title {
   font-size: 26px;
@@ -158,7 +161,7 @@ pre {
   margin-bottom: 0;
   float: left; }
   .site-title, .site-title:visited {
-    color: #424242; }
+    color: white; }
 
 .site-nav {
   float: right;
@@ -166,7 +169,7 @@ pre {
   .site-nav .menu-icon {
     display: none; }
   .site-nav .page-link {
-    color: #111;
+    color: white;
     line-height: 1.5; }
     .site-nav .page-link:not(:first-child) {
       margin-left: 20px; }
@@ -175,7 +178,7 @@ pre {
       position: absolute;
       top: 9px;
       right: 30px;
-      background-color: #fdfdfd;
+      background-color: white;
       border: 1px solid #e8e8e8;
       border-radius: 5px;
       text-align: right; }
